--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-03.component.html
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-03.component.html
@@ -16,15 +16,11 @@
         </div>
     </sc2-confirm>
     <label class="labelStay" >{{'SCN-GEN-STEPS.UPDATE-CONDITION-STAY' | translate}}</label>
-    <!--<label class="label1" >{{'SCN-GEN-STEPS.PROCESSING-READ' | translate}}</label>-->
-    <div class="centerAll" id="processDiv">
-        <img src="../../../../../../assets/images/icon_Processing.png"  class="image"/><br><br>
-        <!-- <span class="procLabel"> {{ label }}</span> -->
-        <span class="procLabel">{{'SCN-GEN-STEPS.PROCESSING' | translate}}</span>
-    </div>
-
+    <label class="label1" >{{'SCN-GEN-STEPS.INSERT-HKID' | translate}}</label>
     <!--   (click)="nextRoute()" -->
-    <!--<img src="../../../../../../assets/images/icon_Processing.png" class="main-image" (click)="pass()"/>-->
+    <video class="main-image" autoplay loop (click) = "nextRoute()">
+        <source src="../../../../../..//assets/videos/insert-hkid.mp4" type="video/mp4" >
+    </video>
     <input #imgNext type="button" (click)="nextRoute()">
     <input type="image" src="../../../../../../assets/images/button_Abort.png" class="exitButton" (click)="backRoute()" />
     <input class="exitButton" type="button" value="{{'SCN-GEN-STEPS.ABORT' | translate}}" (click) = "backRoute()">
