--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-04.component.html
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-001/gen-step-001-04.component.html
@@ -3,6 +3,7 @@
     <input class="buttonTC" type="button" value="{{'SCN-GEN-STEPS.LANGUAGE' | translate}}" (click) = "langButton()">
     <img src="../../../../../../assets/images/menubar_1.png" class="sideimg" />
     <p class="steps-div">{{'SCN-GEN-STEPS.NAVIGATION' | translate}}</p>
+
     <sc2-confirm #modal1>
         <div class="app-modal-body">
             <div class="modal-message">
@@ -14,15 +15,18 @@
             </div>
         </div>
     </sc2-confirm>
-
     <label class="labelStay" >{{'SCN-GEN-STEPS.UPDATE-CONDITION-STAY' | translate}}</label>
-    <label class="label1" >{{'SCN-GEN-STEPS.TYPE-OF-HKID-CARD' | translate}}</label>
-    <label class="oldCardLable">{{'SCN-GEN-STEPS.OLD-HKID-CARD-LABLE' | translate}}</label>
-    <label class="newCardLable">{{'SCN-GEN-STEPS.NEW-HKID-CARD-LABLE' | translate}}</label>
-    <img src="../../../../../../assets/images/4_1.png" class="indicate_left" (click)="insertOldCard()" />
-    <img src="../../../../../../assets/images/4_2.png" class="indicate_right" (click)="insertNewCard()"/>
+    <!--<label class="label1" >{{'SCN-GEN-STEPS.PROCESSING-READ' | translate}}</label>-->
+    <div class="centerAll" id="processDiv">
+        <img src="../../../../../../assets/images/icon_Processing.png"  class="image"/><br><br>
+        <!-- <span class="procLabel"> {{ label }}</span> -->
+        <span class="procLabel">{{'SCN-GEN-STEPS.PROCESSING' | translate}}</span>
+    </div>
+
+    <!--   (click)="nextRoute()" -->
+    <!--<img src="../../../../../../assets/images/icon_Processing.png" class="main-image" (click)="pass()"/>-->
     <input #imgNext type="button" (click)="nextRoute()">
-     <input type="image" src="../../../../../../assets/images/button_Abort.png" class="exitButton" (click)="backRoute()" />
+    <input type="image" src="../../../../../../assets/images/button_Abort.png" class="exitButton" (click)="backRoute()" />
     <input class="exitButton" type="button" value="{{'SCN-GEN-STEPS.ABORT' | translate}}" (click) = "backRoute()">
     <label class="footerSteps">scn-gen-step-001</label>
 </div>
