--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-003/gen-step-003-01.component.scss
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-003/gen-step-003-01.component.scss
@@ -1,4 +1,8 @@
 //@import '../../../../../shared/sc2-confirm/sc2-confirm.components.scss';
+body {
+  font-family: 'Arial','Microsoft YaHei','黑体','宋体',sans-serif;
+  font-size: 23px;
+}
 .buttonTC {
   // position: absolute;
   // top: 27px;
@@ -26,7 +30,8 @@
   top: 27px;
   left: 291px;
   width: 400px;
-  font-size: 35px;
+  font-family: 'Arial','Microsoft YaHei','黑体','宋体',sans-serif;
+  font-size: 30px;
   color: cornflowerblue;
   white-space: pre-wrap;
 }
@@ -35,8 +40,9 @@
   position: absolute;
   top: 203px;
   left: 291px;
-  font-size: 36px;
-  color: #333333;
+  font-family: 'Arial','Microsoft YaHei','黑体','宋体',sans-serif;
+  font-size: 30px;
+  color: #6B6B6B;
   white-space: pre-wrap;
 }
 
@@ -44,7 +50,8 @@
   position: absolute;
   top: 243px;
   left: 261px;
-  font-size: 25px;
+  font-family: 'Arial','Microsoft YaHei','黑体','宋体',sans-serif;
+  font-size: 30px;
   padding: 0px;
   width: 900px;
   height: 300px;
@@ -56,7 +63,8 @@
 .stayTable {
   border-width: 1px;
   border-color: #2CA2A0;
-  font-size: 25px;
+  font-family: 'Arial','Microsoft YaHei','黑体','宋体',sans-serif;
+  font-size: 30px;
   background-color: #ACC2B8;
   margin: 0px;
   padding: 0px;
@@ -88,6 +96,7 @@
   text-align: center;
   vertical-align: middle;
   line-height: 40px;
+  font-family: 'Arial','Microsoft YaHei','黑体','宋体',sans-serif;
   font-size: 30px;
   font-weight: bold;
   color: #FFFFFF;
