--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-004/gen-step-004-01.component.scss
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-004/gen-step-004-01.component.scss
@@ -1,4 +1,7 @@
 //@import '../../../../../shared/sc2-confirm/sc2-confirm.components.scss';
+body {
+  font-family: 'Arial','Microsoft YaHei','黑体','宋体',sans-serif;
+}
 .buttonTC {
   // position: absolute;
   // top: 27px;
@@ -36,7 +39,7 @@
   top: 203px;
   left: 291px;
   font-size: 36px;
-  color: #333333;
+  color: #6B6B6B;
   white-space: pre-wrap;
 }
 
