--- a/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-002/gen-step-002-02.component.html
+++ b/src/app/scn-gen/scn-gen-steps/steps/gen-steps/gen-step-002/gen-step-002-02.component.html
@@ -20,7 +20,7 @@
         <source src="../../../../../../assets/videos/insert-right-fingerprint.mp4" type="video/mp4">
     </video>
     <!--   (click)="nextRoute()" -->
-    <img src="../../../../../../assets/images/image11.png" class="main-image" (click)="nextRoute()"/>
+    <img src="../../../../../../assets/images/image11.png" class="main-image"/>
     <input #imgNext type="hidden" (click)="nextRoute()">
     <input type="image" src="../../../../../../assets/images/button_Abort.png" class="exitButton" (click)="backRoute()" />
     <input class="exitButton" type="button" value="{{'SCN-GEN-STEPS.ABORT' | translate}}" (click) = "backRoute()">
