--- a/src/app/scn-gen/gen-viewcard/scn-gen-006/gen-viewcard-processing.component.html
+++ b/src/app/scn-gen/gen-viewcard/scn-gen-006/gen-viewcard-processing.component.html
@@ -37,9 +37,7 @@
             </div>
         </div>
     </sc2-confirm>
-    <label class="label1" > {{'SCN-GEN-VIEWCARD.INDICATE-CARD-TYPE' | translate}} </label>
-    <img src="../../../../assets/images/4_1.png" class="indicate_left" (click)="nextOld()" />
-    <img src="../../../../assets/images/4_2.png" class="indicate_right" (click)="nextNew()"/>
+    <sc2-process-comp></sc2-process-comp>
     <!--  (click)="nextRoute()" -->
     <!-- <img src="../../../../assets/images/image3.png" class="main-image"/> -->
     <!-- <video class="main-image" autoplay loop>
