--- a/src/app/shared/processing-component/processing.component.html
+++ b/src/app/shared/processing-component/processing.component.html
@@ -1,7 +1,7 @@
 <div class="centerAll">
     <img src="../../../assets/images/icon_Processing.png"  class="image"/><br><br>
     <!-- <span class="procLabel"> {{ label }}</span> -->
-    <span class="procLabel">{{'SCN-SCK-004-1.PROCESSING' | translate}}</span>
+    <span class="procLabel">{{'SCN-GEN-VIEWCARD.PROCESSING' | translate}}</span>
 </div>
 
 
