--- a/src/app/scn-gen/scn-gen-002/scn-gen-002.component.html
+++ b/src/app/scn-gen/scn-gen-002/scn-gen-002.component.html
@@ -4,7 +4,7 @@
     <sc2-confirm #modalNoROP>
         <div class="app-modal-body">
             <div class="modal-message">
-                {{'SCN-GEN-VIEWCARD.TIMEOUT-NO-RESPONSE' | translate}}
+                {{'SCN-GEN-COUNTDOWN.TIMEOUT-NO-RESPONSE' | translate}}
             </div>
         </div>
     </sc2-confirm>
