--- a/src/app/scn-gen/scn-gen-002/scn-gen-002.component.html
+++ b/src/app/scn-gen/scn-gen-002/scn-gen-002.component.html
@@ -8,6 +8,7 @@
             </div>
         </div>
     </sc2-confirm>
+    <sc2-process-comp #processing></sc2-process-comp>
     <!-- <img class="mainBG" src="../../../assets/images/bg_1160x640.png"/> -->
     <div class="mainBG"></div>
     <label class="mainLabel">{{'SCN-SRK-002-1.SELECT_SERVICE_CATEGORY' | translate}}</label>
