--- a/src/app/scn-gen/kiosk/kiosk-home.component.html
+++ b/src/app/scn-gen/kiosk/kiosk-home.component.html
@@ -14,15 +14,15 @@
          <!--<div class="textButtonChinese"> 查看晶片中的個人數據</div>-->
          <!--<div class="textButtonEnglish"> View Personal Data in Chip</div>-->
          <div class="textButtonChinese"> 讀取身份證晶片內的個人資料</div>
-         <div class="textButtonEnglish"> View personal data in chip of identity card</div>
+         <div class="textButtonEnglishLeft"> View personal data in chip of identity card</div>
      </div>
      <div id="updateCoslos" class="updateCosLosInChipBtn">
          <div class="updateBtnImage"></div>
          <!--<img class="updateBtnImage" src="../../../assets/images/home/icon_update_chip.png">-->
          <!--<div class="textButtonChinese">更新逗留條件和逗留期限</div>-->
          <!--<div class="textButtonEnglish">Update Condition of Stay and Limited of Stay in Chip</div>-->
-         <div class="textButtonChinese">更新身份證晶片內的逗留條件及逗留期限</div>
-         <div class="textButtonEnglish">Update Condition of Stay and Limit of Stay in chip of identity card</div>
+         <div class="textButtonChineseRight">更新身份證晶片內的逗留條件及逗留期限</div>
+         <div class="textButtonEnglishRight">Update Condition of Stay and Limit of Stay in chip of identity card</div>
      </div>
  </div>
 </div>
