--- a/src/app/scn-gen/kiosk/kiosk-home.component.scss
+++ b/src/app/scn-gen/kiosk/kiosk-home.component.scss
@@ -95,8 +95,6 @@ body { TEXT-ALIGN: center; }
   height: 180px;
 }
 
-
-
 .textButtonChinese {
   color: #FFFFFF;
   width: 100%;
@@ -106,17 +104,39 @@ body { TEXT-ALIGN: center; }
   max-width: 460px;
   text-align: center;
   margin-left: 60px;
-
 }
-.textButtonEnglish {
+
+.textButtonChineseRight {
+  color: #FFFFFF;
+  width: 100%;
+  font-face: 'MicrosoftJhengHeiRegular';
+  font-size: 30px;
+  line-height: 40px;
+  max-width: 400px;
+  text-align: center;
+  margin-left: 90px;
+}
+
+.textButtonEnglishLeft {
   color: #FFFFFF;
   width: 100%;
   font-face: 'Arial-Regular';
   text-align: center;
   font-size: 28px;
   line-height: 40px;
-  max-width: 460px;
-  margin-left: 60px;
+  max-width: 330px;
+  margin-left: 125px;
   margin-top: 10px;
 }
 
+.textButtonEnglishRight {
+  color: #FFFFFF;
+  width: 100%;
+  font-face: 'Arial-Regular';
+  text-align: center;
+  font-size: 28px;
+  line-height: 40px;
+  max-width: 450px;
+  margin-left: 60px;
+  margin-top: 10px;
+}
