--- a/src/app/scn-gen/kiosk/kiosk-home.component.html
+++ b/src/app/scn-gen/kiosk/kiosk-home.component.html
@@ -1,3 +1,15 @@
+<sc2-confirm #modalFail>
+    <div class="app-modal-body">
+        <div class="modal-message">
+            {{messageFail| translate}}
+        </div>
+        <div class="buttonDiv">
+            <button type="button" class="btnModal confirm" (click)="processFailQuit()"><span>{{'SCN-GEN-STEPS.YES' | translate}}</span></button>
+        </div>
+    </div>
+</sc2-confirm>
+<sc2-process-comp #processing></sc2-process-comp>
+<sc2-process-comp [inputMessage]="preparingMessage" #preparing></sc2-process-comp>
 <div class="mainDiv">
  <div class="headDiv">
     <div class="textSelf-serviceGeneraChinese">
