--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -22,7 +22,7 @@ $blue: #428bca;
 
 $width: 1024px;
 
-$font-primary: 'Arial', sans-serif;
+$font-primary: 'Arial', sans-serif, ImmD-Font;
 
 
 // General
@@ -31,6 +31,12 @@ body{
     padding: 0;
     background-color: #edf0f5;
     overflow-x: hidden;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 *{
