--- a/src/app/shared/sc2-timer/sc2-timer.component.html
+++ b/src/app/shared/sc2-timer/sc2-timer.component.html
@@ -3,6 +3,6 @@
         <p class="time">00 : {{ displayTime }}</p>
     </div>
     <div class="timer-label">
-        <p class="label">Time Remaining</p>
+        <p class="label">{{'SCN-GEN-STEPS.TIME-REMAIN' | translate}}</p>
     </div>
 </div>
