--- a/src/app/shared/processing-component/processing.component.html
+++ b/src/app/shared/processing-component/processing.component.html
@@ -1,8 +1,5 @@
 <div class="centerAll" [ngClass]="{'in': visibleAnimate}" [ngStyle]="{'display': visible ? 'block' : 'none', 'opacity': visibleAnimate ? 1 : 0}">
     <img src="../../../assets/images/icon_Processing.png"  class="image"/><br><br>
     <!-- <span class="procLabel"> {{ label }}</span> -->
-    <span class="procLabel">{{'SCN-GEN-STEPS.PROCESSING' | translate}}</span>
+    <span class="procLabel">{{ (inputMessage == null ? 'SCN-GEN-STEPS.PROCESSING' : inputMessage) | translate}}</span>
 </div>
-
-
-
