--- a/src/app/kgen-viewcard/steps/step-over/step-over.component.html
+++ b/src/app/kgen-viewcard/steps/step-over/step-over.component.html
@@ -1,5 +1,5 @@
 <div class="mainPanel">
-    <sc2-timer (timerExpired)="timeExpire()" class="timer" #timer></sc2-timer>
+    <!--<sc2-timer (timerExpired)="timeExpire()" class="timer" #timer></sc2-timer>-->
     <!--<input class="buttonTC" id="langBtn" type="button" value="{{'SCN-GEN-STEPS.LANGUAGE' | translate}}" (click) = "langButton()">-->
     <img *ngIf="readType === 1 && step === '1'" src="../../../../assets/images/menu/menubar_1_insert_card.png" class="sideimg" />
     <img *ngIf="readType === 1 && step === '2'" src="../../../../assets/images/menu/menubar_2_insert_card.png" class="sideimg" />
