--- a/src/app/kgen-viewcard/steps/step-over/step-over.component.html
+++ b/src/app/kgen-viewcard/steps/step-over/step-over.component.html
@@ -54,7 +54,7 @@
         </div>
     </sc2-confirm>
     <!-- <sc2-process-comp #processing></sc2-process-comp> -->
-    <label class="labelStay" >{{'SCN-GEN-STEPS.VIEW_INFO_CARD' | translate}}</label>
+    <label class="labelStay" *ngIf="operateType === '1' ">{{'SCN-GEN-STEPS.VIEW_INFO_CARD' | translate}}</label>
     <label class="label1" >{{'SCN-GEN-STEPS.COLLECT-HKID-CARD' | translate}}</label>
 
     <!--   (click)="nextRoute()" -->
