--- a/src/app/shared/processing-component/processing.component.scss
+++ b/src/app/shared/processing-component/processing.component.scss
@@ -23,7 +23,7 @@
 
 .procLabel {
     color: #333333;
-    font-size: 44px;    
+    font-size: 44px;
 }
 
 .centerAll {
@@ -31,5 +31,6 @@
     position: absolute;
     z-index: 99999;
     top: 380px;
-    left: 450px;
+    left: 400px;
+    width: 700px;
 }
