--- a/src/app/kgen-viewcard/steps/step-001/step-insertcard.component.html
+++ b/src/app/kgen-viewcard/steps/step-001/step-insertcard.component.html
@@ -21,7 +21,7 @@
             </div>
             <div class="buttonDiv">
                 <button type="button" class="btnModal confirm" (click)="processConfirmQuit()"><span>{{'SCN-GEN-STEPS.YES' | translate}}</span></button>
-                <button type="button" class="btnModal cancel" (click)="processCancelQuit()"><span>{{'SCN-GEN-STEPS.NO' | translate}}</span></button>
+                <button type="button" id="cancelBtn" class="btnModal cancel"><span>{{'SCN-GEN-STEPS.NO' | translate}}</span></button>
             </div>
         </div>
     </sc2-confirm>
