提交打印代码，为以后的打印图片使用，只是提交代码，不添加了打印功能。

--- a/src/app/kgen-viewcard/steps/step-003/step-viewcard.component.html
+++ b/src/app/kgen-viewcard/steps/step-003/step-viewcard.component.html
@@ -132,6 +132,7 @@
         </div>
 
     </div>
+    <img id="immd_logo" [hidden]="true" src="../../../../assets/images/immd_logo.png" class="main-image">
     <img *ngIf="readType === 1" [hidden]="isShowCollect" src="../../../../assets/images/collect-old-hkid.gif" class="main-image">
     <img *ngIf="readType === 2" [hidden]="isShowCollect" src="../../../../assets/images/collect-new-hkid.gif" width="928" height="522" class="main-image">
     <input #imgNext type="hidden" (click)="nextRoute()">
