--- a/src/app/scn-gen/kiosk-home.component.html
+++ b/src/app/scn-gen/kiosk-home.component.html
@@ -8,7 +8,7 @@
      </div>
  </div>
  <div class="contentDiv">
-     <div id="viewPerson" class="viewPersonDataInChipBtn">
+     <div id="viewPerson" class="viewPersonDataInChipBtn" [disabled]="!allDeviceHealthFlag">
          <div class="viewBtnImage"></div>
          <!--<img class="viewBtnImage" src="../../../assets/images/home/icon_view_chip.png">-->
          <!--<div class="textButtonChinese"> 查看晶片中的個人數據</div>-->
@@ -16,7 +16,7 @@
          <div class="textButtonChinese"> 讀取身份證晶片內的個人資料</div>
          <div class="textButtonEnglishLeft"> View personal data in chip of identity card</div>
      </div>
-     <div id="updateCoslos" class="updateCosLosInChipBtn">
+     <div id="updateCoslos" class="updateCosLosInChipBtn" [disabled]="!allDeviceHealthFlag">
          <div class="updateBtnImage"></div>
          <!--<img class="updateBtnImage" src="../../../assets/images/home/icon_update_chip.png">-->
          <!--<div class="textButtonChinese">更新逗留條件和逗留期限</div>-->
@@ -25,4 +25,11 @@
          <div class="textButtonEnglishRight">Update Condition of Stay and Limit of Stay in chip of identity card</div>
      </div>
  </div>
+    <sc2-confirm #modalCheckHealth>
+    <div class="app-modal-body">
+        <div class="modal-message">
+            {{ infoMessage | translate}}
+        </div>
+    </div>
+</sc2-confirm>
 </div>
