--- a/src/app/kgen-viewcard/steps/step-003/step-viewcard.component.html
+++ b/src/app/kgen-viewcard/steps/step-003/step-viewcard.component.html
@@ -137,7 +137,7 @@
     <img *ngIf="readType === 2" [hidden]="isShowCollect" src="../../../../assets/images/collect-new-hkid.gif" width="928" height="522" class="main-image">
     <input #imgNext type="hidden" (click)="nextRoute()">
     <input type="button" [hidden]="!showdata" class="confirmButton" id="confirmBtn" value="{{'SCN-GEN-STEPS.TAKE_CARD_BTN' | translate}}" (click)="nextRoute()">
-    <!--<input type="button" [hidden]="!showdata" class="printButton" id="print" value="{{'SCN-GEN-STEPS.TAKE_CARD_BTN' | translate}}" (click)="printBill()">-->
+    <!--<input type="button" [hidden]="!showdata" class="printButton" id="print" value="{{'SCN-GEN-STEPS.BILL-PRINT-BTN' | translate}}" (click)="printBill()">-->
     <!--<input type="image" src="../../../../assets/images/button_Abort.png" class="exitButton" (click)="processModalQuitShow()" />-->
     <!--<input class="exitButton" id='exitBtn' type="button" value="{{'SCN-GEN-STEPS.ABORT' | translate}}" (click) = "processModalQuitShow()">-->
 </div>
