--- a/src/app/kgen-viewcard/steps/step-001/step-insertcard.component.html
+++ b/src/app/kgen-viewcard/steps/step-001/step-insertcard.component.html
@@ -49,7 +49,7 @@
     <label *ngIf="controlStatus === 3" class="label1">{{'SCN-GEN-STEPS.FAILED-RECOGNISE' | translate}}{{'SCN-GEN-STEPS.TYPE-OF-HKID-CARD' | translate}}</label>
     <label *ngIf="controlStatus === 4" class="label1"></label>
     <sc2-process-comp #processing></sc2-process-comp>
-    <sc2-process-comp [inputMessage]="preparingMessage" #preparing></sc2-process-comp>
+    <!-- <sc2-process-comp [inputMessage]="preparingMessage" #preparing></sc2-process-comp> -->
     <sc2-indicate-cardtype #indicateCardType></sc2-indicate-cardtype>
     <!--   (click)="nextRoute()" -->
 
