--- a/src/app/kgen-viewcard/steps/step-001/step-insertcard.component.html
+++ b/src/app/kgen-viewcard/steps/step-001/step-insertcard.component.html
@@ -40,7 +40,7 @@
         </div>
     </sc2-confirm>
     <label class="labelStay" *ngIf="operateType === '1' ">{{'SCN-GEN-STEPS.VIEW_INFO_CARD' | translate}}</label>
-    
+    <label class="labelStay" *ngIf="operateType === '2' ">{{'SCN-GEN-STEPS.UPDATE_CSOS' | translate}}</label>
     <!--controlstatus 1.insert 2 collect 3 type 4 processing -->
     <label *ngIf="controlStatus === 1 && deviceType === 1" class="label1">{{'SCN-GEN-STEPS.INSERT-HKID' | translate}}</label>
     <label *ngIf="controlStatus === 2 && deviceType === 1" class="label1">{{'SCN-GEN-STEPS.COLLECT-HKID-CARD' | translate}}</label>
