--- a/src/app/kgen-viewcard/steps/step-processing/step-processing.component.html
+++ b/src/app/kgen-viewcard/steps/step-processing/step-processing.component.html
@@ -44,6 +44,7 @@
     </sc2-confirm>
     <sc2-process-comp #processing></sc2-process-comp>
     <label class="labelStay" *ngIf="operateType === '1'">{{'SCN-GEN-STEPS.VIEW_INFO_CARD' | translate}}</label>
+    <label class="labelStay" *ngIf="operateType === '2'">{{'SCN-GEN-STEPS.UPDATE_CSOS' | translate}}</label>
     <label [hidden]="isShowCollect"  class="label1" >{{'SCN-GEN-STEPS.COLLECT-HKID-CARD' | translate}}</label>
     <img *ngIf="readType === 1" [hidden]="isShowCollect" src="../../../../assets/images/collect-old-hkid.gif" class="main-image">
     <img *ngIf="readType === 2" [hidden]="isShowCollect" src="../../../../assets/images/collect-new-hkid.gif" width="928" height="522" class="main-image">
