--- a/src/app/scn-gen/kiosk-home.component.scss
+++ b/src/app/scn-gen/kiosk-home.component.scss
@@ -29,7 +29,7 @@ body { TEXT-ALIGN: center; }
   margin: 0px;
   width: 1280px;
   height: 784px;
-  padding-top: 150px;
+  padding-top: 20px;
   border-width: 0px;
   //background-color: #673ab7;
   border-width: 0px;
@@ -59,84 +59,75 @@ body { TEXT-ALIGN: center; }
   text-align: center;
 }
 
-.viewPersonDataInChipBtn {
-  margin-left: 50px;
-  padding-top: 66px;
-  background-image: url(../../assets/images/home/image_button.png);
-  width: 584px;
-  height: 474px;
+.contentMenuBtn {
   float: left;
-  text-align: center;
+  margin-left: 60px;
+  margin-top:25px;
+  padding-top: 10px;
+  background-image: url(../../assets/images/home_new/image_button_horizontal.png);
+  width: 1164px;
+  height: 222px;
+  text-align: left;
 }
 
 .viewBtnImage {
-  margin-left:200px;
-  margin-rigt:204px;
-  background-image: url(../../assets/images/home/icon_view_chip.png);
-  width: 180px;
-  height: 180px;
+  float: left;
+  margin-left:50px;
+  margin-top:38px;
+  width: 125px;
+  height: 125px;
+  background-image: url(../../assets/images/home_new/icon_view_chip_2.png);
+
 }
 
-.updateCosLosInChipBtn {
-  padding-top: 66px;
-  background-image: url(../../assets/images/home/image_button.png);
-  float: left;
-  margin-left: 16px;
-  margin-right: 46px;
-  width: 584px;
-  height: 474px;
-}
+
 
 .updateBtnImage {
-  margin-left:200px;
-  margin-rigt:204px;
-  background-image: url(../../assets/images/home/icon_update_chip.png);
-  width: 180px;
-  height: 180px;
+  float: left;
+  margin-left:50px;
+  margin-top:38px;
+  width: 125px;
+  height: 125px;
+  background-image: url(../../assets/images/home_new/icon_update_chip_2.png);
+}
+
+.otherAppBtnImage {
+  float: left;
+  margin-left:50px;
+  margin-top:38px;
+  width: 125px;
+  height: 125px;
+  background-image: url(../../assets/images/home_new/icon_macao.png);
+
 }
 
 .textButtonChinese {
+  float: left;
   color: #FFFFFF;
-  width: 100%;
-  font-face: 'MicrosoftJhengHeiRegular';
+  width: 850px;
+  height: 100px;
+  //font-face: 'MicrosoftJhengHeiRegular';
   font-size: 30px;
   line-height: 40px;
-  max-width: 460px;
-  text-align: center;
-  margin-left: 60px;
+  //max-width: 600px;
+  text-align: left;
+  margin: 0px;
+  padding-top: 50px;
+  padding-left: 30px;
 }
 
-.textButtonChineseRight {
+.textButtonEnglish {
+  float: left;
   color: #FFFFFF;
-  width: 100%;
-  font-face: 'MicrosoftJhengHeiRegular';
-  font-size: 30px;
-  line-height: 40px;
-  max-width: 400px;
-  text-align: center;
-  margin-left: 90px;
-}
-
-.textButtonEnglishLeft {
-  color: #FFFFFF;
-  width: 100%;
+  width: 850px;
+  height: 100px;
   font-face: 'Arial-Regular';
-  text-align: center;
-  font-size: 28px;
-  line-height: 40px;
-  max-width: 330px;
+  text-align: left;
+  font-size: 27px;
+  line-height: 38px;
   margin-left: 125px;
-  margin-top: 10px;
-}
-
-.textButtonEnglishRight {
-  color: #FFFFFF;
-  width: 100%;
-  font-face: 'Arial-Regular';
-  text-align: center;
-  font-size: 28px;
-  line-height: 40px;
-  max-width: 450px;
-  margin-left: 60px;
-  margin-top: 10px;
+  // max-width: 765px;
+  margin: 0px;
+  padding-top: 10px;
+  padding-left: 30px;
 }
