--- a/src/app/kgen-viewcard/steps/step-003/step-viewcard.component.html
+++ b/src/app/kgen-viewcard/steps/step-003/step-viewcard.component.html
@@ -84,7 +84,7 @@
             </tr>
             <tr>
                 <td class="firstColumn">{{'SCN-GEN-STEPS.SYMBOLS' | translate}}</td>
-                <td class="SecondColumn">{{carddata.indicators}}</td>
+                <td class="SecondColumn">{{symbol}}</td>
             </tr>
             <tr>
                 <td class="firstColumn">{{'SCN-GEN-STEPS.MONTH-YEAR-REGISTRATION' | translate}}</td>
