--- a/src/app/scn-gen/kiosk-home.component.html
+++ b/src/app/scn-gen/kiosk-home.component.html
@@ -18,7 +18,7 @@
             <div class="textButtonChinese">更新身份證晶片內的逗留條件及逗留期限</div>
             <div class="textButtonEnglish">Update Condition of Stay and Limit of Stay in chip of identity card</div>
         </div>
-        <div id="macaoEchannel" class="contentMenuBtn" [disabled]="!allDeviceHealthFlag">
+        <div id="macaoEchannel" class="contentMenuBtn" [disabled]="!allDeviceHealthFlag" [hidden]="macaoFlag === 'none'">
             <div class="otherAppBtnImage"></div>
             <div class="textButtonChinese">香港居民登記使用澳門特別行政區旅客自助過關系統</div>
             <div class="textButtonEnglish">Hong Kong residents Enrolment for the Automated Passenger Clearance System of The Government of The Macao SAR</div>
