--- a/src/app/shared/menuBanner/banner.component.scss
+++ b/src/app/shared/menuBanner/banner.component.scss
@@ -15,6 +15,7 @@
   height: 180px;
 }
 .viewPersonDataInChipBtn {
+  margin-top: 130px;
   margin-left: 50px;
   padding-top: 66px;
   background-image: url(../../../assets/images/home/image_button.png);
@@ -25,6 +26,7 @@
 }
 
 .updateCosLosInChipBtn {
+  margin-top: 130px;
   padding-top: 66px;
   background-image: url(../../../assets/images/home/image_button.png);
   float: left;
@@ -40,7 +42,7 @@
   font-face: 'MicrosoftJhengHeiRegular';
   font-size: 30px;
   line-height: 40px;
-  max-width: 500px;
+  max-width: 460px;
   text-align: center;
   margin-left: 60px;
 }
