--- a/src/app/scn-gen/kiosk-home.component.html
+++ b/src/app/scn-gen/kiosk-home.component.html
@@ -31,4 +31,24 @@
             </div>
         </div>
     </sc2-confirm>
+    <sc2-confirm #modalNonePaper>
+        <div class="app-modal-body">
+            <div class="modal-message">
+                打印機缺紙，請與職員聯絡。
+            </div>
+            <div class="modal-message">
+                The printer is out of paper, please approach our staff for assistance.
+            </div>
+        </div>
+    </sc2-confirm>
+    <sc2-confirm #modalNotAvailable>
+        <div class="app-modal-body">
+            <div class="modal-message">
+                打印機出錯了，請與職員聯絡。
+            </div>
+            <div class="modal-message">
+                The printer is not available, please approach our staff for assistance.
+            </div>
+        </div>
+    </sc2-confirm>
 </div>
